syntax = "proto3";

package proto;
import "google/protobuf/field_mask.proto";

message Blog {
    int64 id = 1;
    int64 user_id = 2;
    string title = 3;
    string name = 4;
    string description = 5;
    string slug = 6;
}

message ListBlogsRequest {
  int32 page = 1;
  string sort_by = 2;
  string order_by = 3;
}

message ListBlogsResponse { 
  repeated Blog blogs = 1;
  int32 next_page = 2;
}

message GetBlogRequest { int64 blog_id = 1; }

message CreateBlogRequest {
  string name = 1;
  string title = 2;
  string description = 3;
}

message UpdateBlogRequest {
  Blog blog = 1;
  google.protobuf.FieldMask update_mask = 2;
}
message DeleteBlogRequest { int64 blog_id = 1; }
